# ingest_pet

./: pyproject.toml
.github/workflows/: run_pytest.yaml
data/: participants.tsv
ingest_pet/: ingest_pet.py
tests/: conftest.py  test_ingest_pet.py  test_pet_utils.py
